# 4cast-collector

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
collector/: main.py
collector/analyzer/: cost_attribution.py  pricing_coverage.py
collector/auth/: assume_role.py
collector/collectors/: anomaly_detection.py  api_gateway.py  aurora.py  aurora_dsql.py  base.py  cloudfront.py  cloudwatch_logs.py  compute_optimizer.py  cost_explorer.py  documentdb.py  dynamodb.py  ebs.py  ec2.py  ecr.py  ecs.py  efs.py  eks.py  elasticache.py  elb.py  keyspaces.py  kinesis.py  lambda_functions.py  lightsail_databases.py  memorydb.py  neptune.py  network.py  rds.py  redshift.py  s3.py  savings_plans.py  secretsmanager.py  sqs.py  timestream.py  trusted_advisor.py
collector/core/: api_client.py  contract.py  health.py  orchestrator.py  postgres_queue.py  progress.py  result_submit.py  settings.py
collector/knowledge/: pricing.py
collector/store/: evidence.py  object_storage.py
tests/: test_contract.py  test_postgres_queue.py  test_pricing_keys.py  test_result_submit.py  test_result_submit_normalize.py
