[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "4cast-collector"
version = "0.1.0"
description = "Cloud Evidence Collector for 4Cast platform. Optimized for massive parallel metadata extraction from AWS."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "4bCloud", email = "hello@4bcloud.io" }]
dependencies = [
    "4cast-sdk @ git+ssh://git@github.com-kelvin/4bCloud/4cast-sdk.git@v0.1.0",
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "tenacity>=8.3.0",
    "orjson>=3.10.0",
    "zstandard>=0.23.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["collector"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
